  downloaded. For example, in a bucket that has a Docs subdirectory containing
  objects named with a timestamp prefix, the S3 path "my-bucket/Docs/2008" will 
  identify the objects in the Docs subdirectory with names beginning with 2008.
- Added --reportlevel option that allows the user to control how much report
  detail is printed, from 0 (no reporting) to 3 (all reporting).


TOOLKIT

  * General
  
- Fixed bug in RestS3Service that caused failures in some circumstances when 
  buckets were created with the "US" location.

  * Multi-threaded Service

- Added a new listObjects method that performs a multi-threaded listing of a
  bucket's contents. You provide an array of prefix strings which serve to 
  divide your objects into a number of "partitions", and the service performs
  these prefix-based listings in parallel. See ThreadedObjectListing.java for
  an example of how this feature can be used.

-------------
Version 0.6.0
-------------

COCKPIT

- Added support for buckets located in Europe (EU location)
- Generate signed GET URLs based on virtual host names.
- Encryption algorithm can be changed in the preferences dialog.
- Progress dialogs modified to fix display problems with JDK version 6.
- Fixed bug causing encrypted files not to be automatically recognized
  and decrypted in some cases

SYNCHRONIZE

- Added --properties option that allows an explicit properties filename to
  be specified on the command line.
- Added --nodelete option that keeps items on the destination that have been
  removed from the source. This is similar to --keepfiles except that files
  may still be reverted with the --nodelete option.
- Added --noprogress option that prevents progress messages from being 
  printed to the console, for cases where these messages pollute log files.
  This option is similar to --quiet, except the action report is printed.
- Added the --acl option that allows Access Control List settings to be applied